--- a/basemvp/src/main/res/values/colors.xml
+++ b/basemvp/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="window_background">#ffffff</color>
+    <color name="window_background_dark">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="toast_bg_color">#ffffff</color>
 </resources>
