--- a/basemvp/src/main/res/values/styles.xml
+++ b/basemvp/src/main/res/values/styles.xml
@@ -8,4 +8,63 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="SingleLine">
+        <item name="android:lines">1</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <!--app navi bar-->
+    <style name="AppNaviBar">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+    <style name="AppNaviBar.LeftIcon">
+        <item name="android:layout_height">@dimen/app_navi_back_icon_h</item>
+        <item name="android:layout_width">@dimen/app_navi_back_icon_w</item>
+        <item name="android:scaleType">centerInside</item>
+        <item name="android:layout_centerVertical">true</item>
+    </style>
+    <style name="AppNaviBar.Title" parent="SingleLine">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/app_navi_title_size</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:textColor">@color/app_navi_bar_title</item>
+    </style>
+    <style name="AppNaviBar.RightIcon">
+        <item name="android:layout_height">@dimen/app_navi_back_icon_h</item>
+        <item name="android:layout_width">@dimen/app_navi_back_icon_w</item>
+        <item name="android:scaleType">centerInside</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_alignParentEnd">true</item>
+    </style>
+
+    <!-- tips dialog -->
+    <style name="ModeuleMvpDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
+    <style name="Toast"></style>
+    <style name="Toast.Dialog"></style>
+
+    <style name="PlaceHolder">
+        <item name="android:textSize">15dp</item>
+        <item name="android:textColor">#999999</item>
+    </style>
+    <style name="PlaceHolder.Tips">
+        <item name="android:layout_marginTop">25dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+
+
+    <dimen name="app_navi_back_icon_h">45dp</dimen>
+    <dimen name="app_navi_back_icon_w">45dp</dimen>
+    <dimen name="app_navi_title_size">15sp</dimen>
+    <color name="app_navi_bar_title">#ffffff</color>
 </resources>
