--- a/index/src/main/res/values/colors.xml
+++ b/index/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="bg_bottom_navibar">#ffffff</color>
+    <color name="index_navi_text">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
