add net and init ui
Signed-off-by: zhouqi <zhouqi@etyun.top>

--- a/index/src/main/res/layout/activity_index_main.xml
+++ b/index/src/main/res/layout/activity_index_main.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     >
 
-   <fragment
-       android:id="@+id/t_fragment"
+   <FrameLayout
+       android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.zq.modulemvp.index.MainFragment"/>
