--- a/index/src/main/res/values/colors.xml
+++ b/index/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="bg_bottom_navibar">#ffffff</color>
-    <color name="index_navi_text">#ffffff</color>
+    <color name="index_navi_text">#000000</color>
     <color name="black">#000000</color>
 </resources>
