--- a/index/src/main/res/values/dimens.xml
+++ b/index/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="bottom_navigation_height">50dp</dimen>
-    <dimen name="bottom_navigation_icon_size">35dp</dimen>
+    <dimen name="bottom_navigation_icon_size">25dp</dimen>
+    <dimen name="tv_big">30sp</dimen>
+    <dimen name="tv_normal">20sp</dimen>
+    <dimen name="tv_normal_small">16sp</dimen>
 </resources>
