add versionmanager and widget

--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <!-- image pick -->
+    <color name="image_pick_index_bg">#40FFFFFF</color>
+    <color name="image_shadow_color">#E6E6E6</color>
+    <color name="image_fram_color">#dbdbdb</color>
 </resources>
