feat(index):modify interface
Solution:

Cause:

Version: 111
Branch: master
Signed-off-by: zhouqi <zhouqi@etyun.top>

--- a/index/src/main/res/layout/fragment_home.xml
+++ b/index/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OtherFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_list"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tl_contract"
+        style="@style/TabLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="45dp"
+        app:tabMode="scrollable" />
 
-</FrameLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/vp_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tl_contract"
+        android:background="@color/window_background_dark" />
+
+
+</LinearLayout>
