--- a/index/src/main/res/layout/home_rv_news_item.xml
+++ b/index/src/main/res/layout/home_rv_news_item.xml
@@ -18,38 +18,42 @@
             android:gravity="left"
             android:textColor="@color/black"
             android:textSize="@dimen/tv_normal"
+            android:textStyle="bold"
             tools:text="全球新冠肺炎COVID-19实时追踪，关注全球疫情动态" />
 
         <TextView
-            android:id="@+id/tv_category"
+            android:id="@+id/tv_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="90dp"
             android:layout_marginTop="5dp"
-            android:gravity="right"
             android:textSize="@dimen/tv_normal_small"
-            tools:text="头条" />
+            android:textColor="@color/black"
+            android:ellipsize="end"
+            android:maxLines="4"
+            tools:text="头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条头条"
+            />
 
-        <LinearLayout
+     <!--   <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-            <androidx.recyclerview.widget.RecyclerView
+            android:orientation="horizontal">-->
+            <!--<androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_photos"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tool:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 tool:spanCount="3"
-                />
-            <!--<ImageView
-                android:id="@+id/iv_one"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:scaleType="centerInside"
-                tools:src="@drawable/home_icon_sel" />
-
+                />-->
             <ImageView
+                android:id="@+id/iv_show"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:scaleType="centerInside"
+                android:layout_marginTop="5dp"
+                tools:src="@drawable/home_icon_sel" />-->
+
+            <!-- <ImageView
                 android:id="@+id/iv_two"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -64,7 +68,7 @@
                 android:layout_weight="1"
                 android:scaleType="centerInside"
                 tools:src="@drawable/home_icon_sel" />-->
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
         <RelativeLayout
             android:layout_width="match_parent"
